# particle_life

./: .gitignore  CMakeLists.txt  MIGRATION_EMBEDDED.md  README.md  build.bat  build_msvc.bat
src/: main.cpp  renderer.cpp  renderer.h  simulation.cpp  simulation.h
src/shaders/: particle.frag  particle.vert  physics.comp
